# LokanOS

./: .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/workflows/: api-ci.yml  api-gateway-ci.yml  oas.yml  obs.yml  release.yml  sdk-c.yml
alerts/prometheus/: observability-alerts.yaml
api/: openapi.yaml  package-lock.json  package.json
apps/cli/: README.md  demo.mjs  package.json
configs/: rbac.yaml
crates/common-auth/: Cargo.toml
crates/common-auth/src/: lib.rs
crates/common-ble/: Cargo.toml
crates/common-ble/src/: lib.rs
crates/common-config/: Cargo.toml
crates/common-config/src/: lib.rs
crates/common-mdns/: Cargo.toml
crates/common-mdns/src/: lib.rs
crates/common-msgbus/: Cargo.toml
crates/common-msgbus/src/: lib.rs
crates/common-obs/: Cargo.toml
crates/common-obs/src/: lib.rs  metrics.rs
crates/hub-daemon/: Cargo.toml
crates/hub-daemon/src/: main.rs
crates/lokan-automation/: Cargo.toml
crates/lokan-automation/src/: lib.rs
crates/lokan-core/: Cargo.toml
crates/lokan-core/src/: config.rs  lib.rs  runtime.rs  service.rs
crates/lokan-device/: Cargo.toml
crates/lokan-device/src/: lib.rs
crates/lokan-event/: Cargo.toml
crates/lokan-event/src/: lib.rs
crates/lokan-network/: Cargo.toml
crates/lokan-network/src/: lib.rs
dashboards/grafana/: device-registry.json  lokan-overview.json
docker/: compose.dev.yml
docker/dev/: docker-compose.yml  server.py
docs/: apis.md  observability.md  phases.md  release.md  spec.md  updater.md
openapi/: _bundle.json  _bundle.yaml  api-gateway.v1.yaml  api-gateway.yaml  audit-log.yaml  device-registry.yaml  energy-svc.yaml  presence-svc.yaml  radio-coord.yaml  rule-engine.yaml  scene-svc.yaml  telemetry-pipe.yaml  updater.yaml
os/images/: build.sh
os/images/layout/: README.md
scripts/ci/: check-metrics.sh
scripts/dev/: bootstrap-rust-container.sh  issue-client-cert-from-csr.sh  nats.sh  wait-for.sh
scripts/ota/: sign.sh  verify.sh
sdks/c/: CMakeLists.txt
sdks/c/examples/: health.c
sdks/c/include/: lokan.h
sdks/c/src/: lokan.c
sdks/typescript/: client.js  client.ts  package.json  types.js  types.ts
security/pki/dev/: README.md  generate_ca.sh  generate_client_cert.sh  generate_server_cert.sh
security/pki/dev/ota/: ota_signing_private.pem  ota_signing_public.pem
services/api-gateway/: Cargo.toml  package-lock.json  package.json
services/api-gateway/__tests__/: server.test.js
services/api-gateway/src/: audit.rs  commissioning.rs  config.js  config.rs  device_registry.rs  error.rs  index.js  lib.rs  main.rs  rate_limit.rs  rbac.rs  routes.js  server.js
services/api-gateway/tests/: commissioning.rs  observability.rs
services/audit-log/: Cargo.toml
services/audit-log/src/: main.rs
services/device-registry/: Cargo.toml  Dockerfile  docker-entrypoint.sh  package-lock.json  package.json
services/device-registry/__tests__/: registry.test.js
services/device-registry/proto/: device_registry.proto
services/device-registry/src/: grpc.js  index.js  main.rs  registry.js  rest.js  types.js
services/energy-svc/: Cargo.toml
services/energy-svc/src/: main.rs
services/presence-svc/: Cargo.toml  package-lock.json  package.json
services/presence-svc/__tests__/: presence.test.js
services/presence-svc/src/: index.js  main.rs  rest.js  store.js
services/radio-coord/: Cargo.toml
services/radio-coord/src/: main.rs
services/rule-engine/: Cargo.toml  jest.config.js  package-lock.json  package.json
services/rule-engine/__tests__/: app.test.js  parser.test.js  simulator.test.js
services/rule-engine/src/: app.js  index.js  main.rs
services/rule-engine/src/lib/: parser.js  simulator.js  utils.js
services/scene-svc/: Cargo.toml  package-lock.json  package.json
services/scene-svc/__tests__/: scene.test.js
services/scene-svc/src/: device-registry.js  errors.js  index.js  main.rs  rest.js  scenes.js
services/secrets/lokan_secrets/: __init__.py
services/secrets/lokan_secrets/backends/: __init__.py  base.py  env.py  sealed_kv.py
services/secrets/tests/: test_env_backend.py
services/telemetry-pipe/: Cargo.toml
services/telemetry-pipe/src/: main.rs
services/updater/: Cargo.toml  package-lock.json  package.json
services/updater/__tests__/: rest.test.js  state-machine.test.js
services/updater/src/: bundle.rs  core.rs  health.rs  index.js  lib.rs  main.rs  rest.js  state-machine.js  state.rs  store.rs
services/updater/tests/: metrics.rs  state_machine.rs
tests/e2e/: updater_scenario.sh
tools/: Cargo.toml  attest.sh  oas-bundle.rs  oas2ts.ts  sbom.sh
