[workspace]
members = [
    "crates/common-auth",
    "crates/common-config",
    "crates/common-msgbus",
    "crates/common-mdns",
    "crates/common-ble",
    "crates/common-obs",
    "services/api-gateway",
    "services/device-registry",
    "services/rule-engine",
    "services/scene-svc",
    "services/presence-svc",
    "services/energy-svc",
    "services/updater",
    "services/telemetry-pipe",
    "services/audit-log",
    "services/radio-coord",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
axum = "0.7"
common-config = { path = "crates/common-config" }
common-msgbus = { path = "crates/common-msgbus" }
common-mdns = { path = "crates/common-mdns" }
common-ble = { path = "crates/common-ble" }
common-obs = { path = "crates/common-obs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1"
