[package]
name = "hub-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
lokan-automation = { path = "../lokan-automation" }
lokan-core = { path = "../lokan-core" }
lokan-device = { path = "../lokan-device" }
lokan-event = { path = "../lokan-event" }
lokan-network = { path = "../lokan-network" }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
