[package]
name = "lokan-automation"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
lokan-event = { path = "../lokan-event" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
