[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
axum-server = { version = "0.7", features = ["tls-rustls"] }
common-config = { workspace = true }
common-mdns = { workspace = true }
common-msgbus = { workspace = true }
common-obs = { workspace = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rustls = "0.23"
rustls-pemfile = "2.1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
