[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
axum-server = { version = "0.7", features = ["tls-rustls"] }
common-config = { workspace = true }
common-mdns = { workspace = true }
common-msgbus = { workspace = true }
common-obs = { workspace = true }
common-ble = { workspace = true }
base64 = "0.21"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rustls = "0.23"
rustls-pemfile = "2.1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
async-trait = "0.1"
hyper = "0.14"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
