[package]
name = "audit-log"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["macros", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "sync"] }
tracing = { workspace = true }
common-config = { workspace = true }
common-obs = { workspace = true }
sha2 = "0.10"
base64 = "0.21"
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
