[package]
name = "device-registry"
version = "0.1.0"
edition = "2021"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[dependencies]
axum = { workspace = true, features = ["ws", "macros", "json"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1", features = ["serde", "v4"] }
common-config = { workspace = true }
common-obs = { workspace = true }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "chrono", "migrate", "json", "any"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = { version = "0.3", features = ["sink"] }
futures-core = "0.3"
anyhow = "1"
thiserror = "1"
