[package]
name = "radio-coord"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
common-config = { workspace = true }
common-mdns = { workspace = true }
common-msgbus = { workspace = true }
common-obs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
