[package]
name = "scene-svc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["macros", "json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }
common-config = { workspace = true }
common-obs = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
