[package]
name = "updater"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
common-config = { workspace = true }
common-obs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
