[package]
name = "updater"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = { workspace = true, features = ["macros", "json"] }
common-config = { workspace = true }
common-obs = { workspace = true }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "fs", "time"] }
tracing = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
